--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "description": "",
   "devDependencies": {
     "@types/express": "^5.0.3",
+    "@types/node": "^24.0.3",
     "@types/validator": "^13.15.2",
     "nodemon": "^3.1.10",
     "ts-node-dev": "^2.0.0",
